[gd_scene load_steps=10 format=3 uid="uid://7kapjd7ltwec"]

[ext_resource type="Script" path="res://商店系统/脚本/shop.gd" id="1_fk8qm"]
[ext_resource type="Texture2D" uid="uid://bdgiqkpyos727" path="res://商店系统/资源/shop_anim.png" id="2_ccilp"]
[ext_resource type="Texture2D" uid="uid://ddtel5opc3xdj" path="res://icon.svg" id="3_s2ble"]
[ext_resource type="Script" path="res://商店系统/脚本/ShopInventory.gd" id="3_w5gol"]

[sub_resource type="Animation" id="Animation_hyewb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yhkjb"]
resource_name = "shop"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bgby"]
_data = {
"RESET": SubResource("Animation_hyewb"),
"shop": SubResource("Animation_yhkjb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ir6l"]
size = Vector2(117, 113)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xwff"]
size = Vector2(116.5, 113)

[node name="Shop" type="StaticBody2D"]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_fk8qm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ccilp")
centered = false
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7bgby")
}
autoplay = "shop"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(58.5, 72.5)
shape = SubResource("RectangleShape2D_6ir6l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(58.75, 72)
shape = SubResource("RectangleShape2D_8xwff")
disabled = true

[node name="ShopUI" type="CanvasLayer" parent="."]

[node name="ShopInventoryInterface" type="PanelContainer" parent="ShopUI"]
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("3_w5gol")

[node name="HBoxContainer" type="HBoxContainer" parent="ShopUI/ShopInventoryInterface"]
layout_mode = 2

[node name="Shop" type="MarginContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="TextureRect" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop/GridContainer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="TextureRect2" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop/GridContainer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="TextureRect3" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop/GridContainer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="TextureRect4" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop/GridContainer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="TextureRect5" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop/GridContainer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="TextureRect6" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Shop/GridContainer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="Operate" type="MarginContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate"]
layout_mode = 2

[node name="seller" type="MarginContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer/seller"]
layout_mode = 2
expand_mode = 1

[node name="changeIcon" type="MarginContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect6" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer/changeIcon"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="buyer" type="MarginContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect6" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer/buyer"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[node name="button" type="MarginContainer" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect6" type="TextureRect" parent="ShopUI/ShopInventoryInterface/HBoxContainer/Operate/VBoxContainer/button"]
layout_mode = 2
texture = ExtResource("3_s2ble")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
